[gd_scene load_steps=3 format=3 uid="uid://dh73ev5q32kuv"]

[ext_resource type="Script" path="res://player.gd" id="1_0y5gf"]
[ext_resource type="FontFile" uid="uid://cyseqsabnchww" path="res://KrayolaV1Regular-1Go9e.ttf" id="1_teell"]

[node name="Player" type="Node2D"]
script = ExtResource("1_0y5gf")

[node name="LineEdit" type="LineEdit" parent="."]
offset_right = 161.0
offset_bottom = 38.0
theme_override_fonts/font = ExtResource("1_teell")
theme_override_font_sizes/font_size = 22
placeholder_text = "Add Player"

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[connection signal="mouse_entered" from="LineEdit" to="." method="_on_line_edit_mouse_entered"]
[connection signal="mouse_exited" from="LineEdit" to="." method="_on_text_edit_mouse_exited"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
